@@ -24,6 +24,7 @@ grid.export <- function(name = "Rplots.svg",
                         progress = FALSE,
                         compression = 0,
                         strict = TRUE,
+                        rootAttrs = NULL,
                         xmldecl = xmlDecl()) {
     # 'XML' can sometimes give us namespace warnings, despite producing
     # valid SVG. Silence any warnings that 'XML' might give us.
@@ -101,7 +102,7 @@ grid.export <- function(name = "Rplots.svg",
     }
 
     svgdev <- openSVGDev(name, width=par("din")[1], height=par("din")[2],
-                         res = res, strict = strict)
+                         res = res, strict = strict, rootAttrs = rootAttrs)
     # Create a gTree from the current page
     # NOTE that set the 'gp' slot on this top-level gTree
     # based on ROOT vp
@@ -253,6 +254,7 @@ gridsvg <- function(name = "Rplots.svg",
                     progress = FALSE,
                     compression = 0,
                     strict = TRUE,
+                    rootAttrs = NULL,
                     xmldecl = xmlDecl(),
                     ...) {
     # Avoid multiple gridSVG devices (because referenced content can
