@@ -24,6 +24,7 @@ gridsvg(name = "Rplots.svg",
         progress = FALSE,
         compression = 0,
         strict = TRUE,
+        rootAttrs = NULL,
         xmldecl = xmlDecl(), ...)
 dev.off(which = dev.cur())
 }
@@ -31,7 +32,7 @@ dev.off(which = dev.cur())
   \item{name, exportCoords, exportMappings, exportJS, res, prefix,
     addClasses, indent,
     htmlWrapper, usePaths, uniqueNames, annotate, progress,
-    compression, strict, xmldecl}{
+    compression, strict, rootAttrs, xmldecl}{
     These parameters are passed onto \code{\link{grid.export}}.
   }
   \item{\dots}{
